--- a/servers/tsconfig.build.json
+++ b/servers/tsconfig.build.json
@@ -1,5 +1,4 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": [
-    "gateway/node_modules", "test", "dist", "**/*spec.ts"]
+  "exclude": ["gateway/node_modules", "test", "dist", "**/*spec.ts"]
 }
